--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h2>it is first push website</h2>
     <h2>another adding line new team member</h2>
     <h3>another addded practice</h3>
+    <img src="mohin.jpg" alt="">
 </body>
 </html>
