learning about second branch

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h2>it is first push website</h2>
     <h2>another adding line new team member</h2>
     <h3>another addded practice</h3>
+    <h3>taliking my second branch</h3>
+    <h3>this line added my second branch</h3>
     <img src="mohin.jpg" alt="">
 </body>
 </html>
