--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h3>another addded practice</h3>
     <h3>taliking my second branch</h3>
     <h3>this line added my second branch</h3>
+    <h3>added more code get in 2nd branch</h3>
     <img src="mohin.jpg" alt="">
 </body>
 </html>
